Refactor PyHealth export functionality to use tab as default CSV separator and remove unused code

--- a/examples/pyhealth.ipynb
+++ b/examples/pyhealth.ipynb
@@ -8,8 +8,7 @@
    "outputs": [],
    "source": [
     "# Generate database and export data\n",
-    "!pyomop -e GiBleed -v 5.3 --connection-info\n",
-    "!pyomop --pyhealth-path ~/pyhealth"
+    "!pyomop -e GiBleed -v 5.3 --pyhealth-path ~/pyhealth\n"
    ]
   },
   {
